# rviz_3d_object_visualizer

./: CMakeLists.txt  LICENSE  README.md  package.xml  plugin_description.xml
config/: demo.rviz  demo_ycb.rviz  model_params.yaml  object_mesh_categories.yaml
include/data_loader/: model_loader.h
include/data_provider/: model_data.h  model_loader.h
include/dataloader/: abstract_dataloader.h  mdr_dataloader.h  model_data.h  model_loader.h  mongodb_dataloader.h  yaml_loader.h
include/dataloader/modelloader/: mesh.h  model.h  model_data.h  model_loader.h  utils.h  yaml_loader.h
include/rviz_plugin/: object_visualization_manager.h
launch/: demo.launch  rviz_3d_object_visualizer.launch
resources/meshes/book/: book.dae
resources/meshes/bowl/: bowl.dae
resources/meshes/chair/: chair.dae
resources/meshes/fork/: fork.dae
resources/meshes/knife/: knife.dae
resources/meshes/person/: female.dae
resources/meshes/plate/: plate.dae
resources/meshes/pot/: pot.dae
resources/meshes/question_mark/: question_mark.dae
resources/meshes/spoon/: spoon.dae
resources/meshes/spray_bottle/: spray_bottle.dae
resources/meshes/table/: table.dae
resources/meshes/teddy_bear/: teddy_bear.dae
resources/ycb_dataset/a_colored_wood_blocks/: model-1_4.sdf
resources/ycb_dataset/a_cups/: model-1_4.sdf
resources/ycb_dataset/a_marbles/: model-1_4.sdf
resources/ycb_dataset/apple/: model-1_4.sdf
resources/ycb_dataset/b_colored_wood_blocks/: model-1_4.sdf
resources/ycb_dataset/b_lego_duplo/: model-1_4.sdf
resources/ycb_dataset/b_marbles/: model-1_4.sdf
resources/ycb_dataset/b_toy_airplane/: model-1_4.sdf
resources/ycb_dataset/bleach_cleanser/: model-1_4.sdf
resources/ycb_dataset/bowl/: model-1_4.sdf
resources/ycb_dataset/c_cups/: model-1_4.sdf
resources/ycb_dataset/c_lego_duplo/: model-1_4.sdf
resources/ycb_dataset/c_toy_airplane/: model-1_4.sdf
resources/ycb_dataset/chain/: model-1_4.sdf
resources/ycb_dataset/cracker_box/: model-1_4.sdf
resources/ycb_dataset/d_cups/: model-1_4.sdf
resources/ycb_dataset/d_lego_duplo/: model-1_4.sdf
resources/ycb_dataset/d_toy_airplane/: model-1_4.sdf
resources/ycb_dataset/dice/: model-1_4.sdf
resources/ycb_dataset/e_cups/: model-1_4.sdf
resources/ycb_dataset/e_toy_airplane/: model-1_4.sdf
resources/ycb_dataset/f_lego_duplo/: model-1_4.sdf
resources/ycb_dataset/flat_screwdriver/: model-1_4.sdf
resources/ycb_dataset/fork/: model-1_4.sdf
resources/ycb_dataset/g_lego_duplo/: model-1_4.sdf
resources/ycb_dataset/gelatin_box/: model-1_4.sdf
resources/ycb_dataset/h_cups/: model-1_4.sdf
resources/ycb_dataset/j_cups/: model-1_4.sdf
resources/ycb_dataset/knife/: model-1_4.sdf
resources/ycb_dataset/large_clamp/: model-1_4.sdf
resources/ycb_dataset/large_marker/: model-1_4.sdf
resources/ycb_dataset/master_chef_can/: model-1_4.sdf
resources/ycb_dataset/medium_clamp/: model-1_4.sdf
resources/ycb_dataset/mini_soccer_ball/: model-1_4.sdf
resources/ycb_dataset/mustard_bottle/: model-1_4.sdf
resources/ycb_dataset/padlock/: model-1_4.sdf
resources/ycb_dataset/peach/: model-1_4.sdf
resources/ycb_dataset/pear/: model-1_4.sdf
resources/ycb_dataset/phillips_screwdriver/: model-1_4.sdf
resources/ycb_dataset/plum/: model-1_4.sdf
resources/ycb_dataset/pudding_box/: model-1_4.sdf
resources/ycb_dataset/racquetball/: model-1_4.sdf
resources/ycb_dataset/scissors/: model-1_4.sdf
resources/ycb_dataset/skillet_lid/: model-1_4.sdf
resources/ycb_dataset/softball/: model-1_4.sdf
resources/ycb_dataset/spatula/: model-1_4.sdf
resources/ycb_dataset/sponge/: model-1_4.sdf
resources/ycb_dataset/spoon/: model-1_4.sdf
resources/ycb_dataset/strawberry/: model-1_4.sdf
resources/ycb_dataset/sugar_box/: model-1_4.sdf
resources/ycb_dataset/tennis_ball/: model-1_4.sdf
resources/ycb_dataset/tomato_soup_can/: model-1_4.sdf
resources/ycb_dataset/wood_block/: model-1_4.sdf
resources/ycb_dataset/ycb_007_tuna_fish_can/: model-1_4.sdf
resources/ycb_dataset/ycb_010_potted_meat_can/: model-1_4.sdf
resources/ycb_dataset/ycb_011_banana/: model-1_4.sdf
resources/ycb_dataset/ycb_014_lemon/: model-1_4.sdf
resources/ycb_dataset/ycb_017_orange/: model-1_4.sdf
resources/ycb_dataset/ycb_019_pitcher_base/: model-1_4.sdf
resources/ycb_dataset/ycb_022_windex_bottle/: model-1_4.sdf
resources/ycb_dataset/ycb_025_mug/: model-1_4.sdf
resources/ycb_dataset/ycb_027_skillet/: model-1_4.sdf
resources/ycb_dataset/ycb_029_plate/: model-1_4.sdf
src/: dataloader_node.cpp  demo.cpp  demo_ycb.cpp  main.cpp  rviz_dataloader.cpp
src/data_loader/: model_data.cpp  model_loader.cpp
src/data_provider/: model_data.cpp  model_loader.cpp
src/dataloader/: mdr_dataloader.cpp  model.cpp  model_data.cpp  model_loader.cpp  mongodb_dataloader.cpp  yaml_loader.cpp
src/rviz_plugin/: object_visualization_manager.cpp
(+103 files in other folders)
