<?xml version="1.0"?>
<package format="2">
  <name>rviz_3d_object_visualizer</name>
  <version>0.0.0</version>
  <description>
    A component for visualizing 3D object models on RViz. 
    It consists of i) an RViz panel plugin that loads 3D object meshes and 
    displays them on a list, allowing individual and group object 
    visualization, and ii) a node that handles reading a MongoDB database 
    to obtain and update the necessary object information.
  </description>

  <license>MIT</license>

  <author email="sushant.chavan@inf.h-brs.de">Sushant Vijay Chavan</author>
  <author email="ahmed.abdelrahman@inf.h-brs.de">Ahmed Faisal Abdelrahman</author>

  <maintainer email="sushant.chavan@inf.h-brs.de">Sushant Vijay Chavan</maintainer>
  <maintainer email="ahmed.abdelrahman@inf.h-brs.de">Ahmed Faisal Abdelrahman</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>mas_perception_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>mongodb_store</exec_depend>
  <exec_depend>mas_perception_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
